# memory-game-expectations

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json
src/: app.rs  expectations.rs  main.rs
src/components/: background.rs  calculation.rs  download_button.rs  mod.rs
src/pages/: home.rs
style/: output.css
